Kinect working example with AIBO Head

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,13 +25,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/openGeppetto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.com.primesense.NITE.jar=/usr/download/NITE-Bin-Dev-Linux-x86-v1.5.2.21/Bin/com.primesense.NITE.jar
 file.reference.org.OpenNI.jar=/usr/download/OpenNI/Platform/Linux/Bin/x86-Release/org.OpenNI.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.com.primesense.NITE.jar}:\
-    ${file.reference.org.OpenNI.jar}
+    ${file.reference.org.OpenNI.jar}:\
+    ${libs.swing-layout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=openGeppetto.Main
+main.class=openGeppetto.controlGUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
