AIBO Walking example now working

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.org.OpenNI.jar}:\
-    ${libs.swing-layout.classpath}
+    ${libs.swing-layout.classpath}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
