Multiple robot control enabled! [Milestone]

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=/home/cj/.netbeans/7.0/build.properties
+file.reference.org.OpenNI.jar=C:\\Users\\Cj\\Desktop\\openGeppetto\\dist\\lib\\org.OpenNI.jar
+user.properties.file=C:\\Users\\Cj\\AppData\\Roaming\\NetBeans\\7.2\\build.properties
